# mcp-slack-server

./: .gitignore  .pre-commit-config.yaml  AWS_DEPLOYMENT_GUIDE.md  COST_MONITORING.md  Dockerfile  INSTALLATION_GUIDE.md  LICENSE  NGROK_GUIDE.md  QUICKSTART.md  README.md  SECURITY.md  apprunner.yaml  aws.example.json  deploy.sh  env.example.json  manifest.json  pyproject.toml  requirements.txt  run_server.py  run_server_with_ngrok.py  setup.py
.github/workflows/: ci.yml
slack_mcp_app/: __init__.py  cli.py  requirements.txt  slack_mcp_server.py  tools.py
tests/: test_slack_mcp_server.py
