[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slack-mcp-server"
version = "1.0.0"
description = "Professional FastMCP server for Slack workspace automation with 25 tools"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Baha K覺z覺l", email = "bahakizil@me.com"}
]
maintainers = [
    {name = "Baha K覺z覺l", email = "bahakizil@me.com"}
]
keywords = ["slack", "mcp", "automation", "chatbot", "fastapi", "ai"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Communications :: Chat",
    "Topic :: Office/Business",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0,<1.0.0",
    "uvicorn[standard]>=0.24.0,<1.0.0",
    "slack-sdk>=3.27.0,<4.0.0",
    "pydantic>=2.5.0,<3.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "mcp>=1.0.0",
    "fastmcp>=2.7.0,<3.0.0",
    "structlog>=23.2.0,<24.0.0",
    "cryptography>=41.0.0",
    "requests>=2.31.0,<3.0.0",
]



[project.urls]
Homepage = "https://github.com/bahakizil/mcp-slack-server"
Documentation = "https://github.com/bahakizil/mcp-slack-server#readme"
Repository = "https://github.com/bahakizil/mcp-slack-server.git"
"Bug Tracker" = "https://github.com/bahakizil/mcp-slack-server/issues"



[tool.hatch.build.targets.wheel]
packages = ["slack_mcp_app"]

 